--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 phpcs.xml export-ignore
+.wordpress-org export-ignore
+.svnignore export-ignore
