--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 
 .gitattributes export-ignore
 .gitignore export-ignore
-phpcs.xml export-ignore
+.phpcs.xml export-ignore
 .wordpress-org export-ignore
 .svnignore export-ignore
 make-post.md export-ignore
