--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .phpcs.xml export-ignore
-.wordpress-org export-ignore
+/.wordpress-org export-ignore
+/.github export-ignore
 .svnignore export-ignore
 make-post.md export-ignore
