--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@ composer.lock export-ignore
 .phpcs.xml export-ignore
 .phpcs.xml.dist export-ignore
 phpunit.xml export-ignore
+phpunit.xml.dist export-ignore
 /tests export-ignore
 /bin export-ignore
 /.github export-ignore
