--- a/.github/workflows/wp-phpunit.yml
+++ b/.github/workflows/wp-phpunit.yml
@@ -7,10 +7,11 @@ on:
   push:
     branches:
       - master
+      - develop
   pull_request:
     branches:
       - master
-
+      - develop
 jobs:
   run:
     runs-on: ${{ matrix.operating-system }}
