--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,17 @@
   },
   "prefer-stable": true,
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "afragen/wp-dependency-installer": "^4"
+  },
+  "autoload": {
+    "files": [
+      "src/wp-admin/includes/class-wp-site-health.php",
+      "src/wp-admin/includes/class-plugin-theme-upgrader.php",
+      "src/wp-admin/includes/class-wp-upgrader.php",
+      "src/wp-includes/update.php",
+      "src/wp-admin/includes/class-rollback-auto-update.php",
+      "src/testing/failure-simulator.php"
+    ]
   }
 }
