--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
   },
   "prefer-stable": true,
   "require": {
-    "php": ">=5.6",
-    "afragen/wp-dependency-installer": "^4"
+    "php": ">=5.6"
   },
   "autoload": {
     "files": [
