--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 composer.lock export-ignore
 .phpcs.xml export-ignore
 .phpcs.xml.dist export-ignore
+phpcs.xml.dist export-ignore
 phpunit.xml export-ignore
 phpunit.xml.dist export-ignore
 /tests export-ignore
