--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,16 @@
   "require": {
     "php": ">=5.6"
   },
+  "require-dev": {
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
+    "squizlabs/php_codesniffer": "3.6.0",
+    "wp-coding-standards/wpcs": "~2.3.0"
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
+  },
   "autoload": {
     "files": [
       "src/testing/failure-simulator.php"
