--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 
 .gitattributes export-ignore
 .gitignore export-ignore
+.editorconfig export-ignore
 composer.lock export-ignore
 .phpcs.xml export-ignore
 .phpcs.xml.dist export-ignore
