--- a/.github/workflows/wp-phpunit.yml
+++ b/.github/workflows/wp-phpunit.yml
@@ -19,12 +19,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ["7.3", "7.4", "8.0", "8.1", "8.2"]
-        include:
-          - php-versions: "5.6"
-          - php-versions: "7.0"
-          - php-versions: "7.1"
-          - php-versions: "7.2"
+        php-versions:
+          ["5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
 
     name: PHP ${{ matrix.php-versions }} Test on ubantu-latest
     steps:
