--- a/.github/workflows/wp-phpunit.yml
+++ b/.github/workflows/wp-phpunit.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         php-versions:
-          ["5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
+          ["5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2", "8.3"]
 
     name: PHP ${{ matrix.php-versions }} Test on ubantu-latest
     steps:
@@ -43,7 +43,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           coverage: none
           extensions: mysql, mysqli
-          tools: composer, wp-cli, phpunit-polyfills, phpunit
+          tools: composer, wp-cli, phpunit-polyfills:1.0
         env:
           COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
